tests/snapshots/full__full__if_statement_multi_line_bad.snap
---
source: tests/full.rs
expression: result

---
Unexpected indentation.

error: 
  ┌─ sample:4:2
  │
4 │  5
  │  ^


